<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android VSCode</string>

    <!-- Activity Bar -->
    <string name="activity_bar_explorer">Explorer</string>
    <string name="activity_bar_search">Search</string>
    <string name="activity_bar_source_control">Source Control</string>
    <string name="activity_bar_extensions">Extensions</string>
    <string name="activity_bar_debug">Run and Debug</string>

    <!-- Panel -->
    <string name="panel_problems">Problems</string>
    <string name="panel_output">Output</string>
    <string name="panel_terminal">Terminal</string>
    <string name="panel_debug_console">Debug Console</string>

    <!-- Status Bar -->
    <string name="status_bar_branch">main</string>
    <string name="status_bar_encoding">UTF-8</string>
    <string name="status_bar_line_endings">LF</string>
    <string name="status_bar_language">Plain Text</string>
    <string name="status_bar_feedback">Feedback</string>
    <string name="status_bar_notifications">Notifications</string>
    <string name="status_bar_line_col">Ln %1$d, Col %2$d</string>

    <!-- Menu Items -->
    <string name="menu_new_file">New File</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="menu_open_file">Open File</string>
    <string name="menu_open_folder">Open Folder</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_as">Save As…</string>
    <string name="menu_save_all">Save All</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_find">Find</string>
    <string name="menu_replace">Replace</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_command_palette">Command Palette…</string>

    <!-- Dialog Messages -->
    <string name="dialog_confirm_delete_title">Confirm Delete</string>
    <string name="dialog_confirm_delete_message">Are you sure you want to delete "%1$s"?</string>
    <string name="dialog_save_changes_title">Save Changes</string>
    <string name="dialog_save_changes_message">Do you want to save changes to "%1$s"?</string>
    <string name="dialog_unsaved_changes">There are unsaved changes. Do you want to save them?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_dont_save">Don\'t Save</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_close">Close</string>

    <!-- Editor Labels -->
    <string name="editor_welcome">Welcome to Android VSCode</string>
    <string name="editor_no_file_open">No file is currently open</string>
    <string name="editor_untitled">Untitled</string>
    <string name="editor_modified">Modified</string>
    <string name="editor_readonly">Read Only</string>
    <string name="editor_line_count">%1$d lines</string>

    <!-- Sidebar -->
    <string name="sidebar_no_folder_open">You have not yet opened a folder.</string>
    <string name="sidebar_open_folder_button">Open Folder</string>
    <string name="sidebar_collapse_all">Collapse All</string>

    <!-- Search -->
    <string name="search_find">Search</string>
    <string name="search_replace">Replace</string>
    <string name="search_find_in_files">Find in Files</string>
    <string name="search_replace_in_files">Replace in Files</string>
    <string name="search_match_case">Match Case</string>
    <string name="search_whole_word">Whole Word</string>
    <string name="search_regex">Use Regular Expression</string>
    <string name="search_no_results">No results found.</string>
    <string name="search_result_count">%1$d results in %2$d files</string>

    <!-- Source Control -->
    <string name="scm_changes">Changes</string>
    <string name="scm_staged_changes">Staged Changes</string>
    <string name="scm_no_changes">No changes detected.</string>
    <string name="scm_commit">Commit</string>
    <string name="scm_commit_message_hint">Message (press Ctrl+Enter to commit)</string>
    <string name="scm_initialize_repo">Initialize Repository</string>

    <!-- Extensions -->
    <string name="extensions_search">Search Extensions</string>
    <string name="extensions_installed">Installed</string>
    <string name="extensions_recommended">Recommended</string>
    <string name="extensions_no_installed">No extensions installed.</string>
    <string name="extensions_install">Install</string>
    <string name="extensions_uninstall">Uninstall</string>
    <string name="extensions_enable">Enable</string>
    <string name="extensions_disable">Disable</string>

    <!-- Debug -->
    <string name="debug_run">Run</string>
    <string name="debug_run_and_debug">Run and Debug</string>
    <string name="debug_no_configuration">No debug configuration found.</string>
    <string name="debug_create_launch_json">Create a launch.json file</string>
    <string name="debug_start">Start Debugging</string>
    <string name="debug_stop">Stop</string>
    <string name="debug_pause">Pause</string>
    <string name="debug_continue">Continue</string>
    <string name="debug_step_over">Step Over</string>
    <string name="debug_step_into">Step Into</string>
    <string name="debug_step_out">Step Out</string>
    <string name="debug_restart">Restart</string>

    <!-- Terminal -->
    <string name="terminal_new">New Terminal</string>
    <string name="terminal_kill">Kill Terminal</string>
    <string name="terminal_clear">Clear Terminal</string>
    <string name="terminal_select_all">Select All</string>
    <string name="terminal_copy">Copy</string>
    <string name="terminal_paste">Paste</string>

    <!-- General -->
    <string name="close">Close</string>
    <string name="close_all">Close All</string>
    <string name="close_others">Close Others</string>
    <string name="close_to_right">Close to the Right</string>
    <string name="close_saved">Close Saved</string>
    <string name="toggle_panel">Toggle Panel</string>
    <string name="toggle_sidebar">Toggle Sidebar</string>
    <string name="toggle_fullscreen">Toggle Full Screen</string>
</resources>